--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.box {max-width: 1100px; margin: 0 auto;}
+.w-100 { width: 100%; }
+.d-block {display: block;}
+.float-right {float:right};
+.d-flex {display: flex;}
+.mb10 {margin-bottom: 10px;}
+.float-left {float: left;}
+.m-0 {margin: 0px !important;}
+.text-center {text-align: center !important;}
+.mr-10 {margin-right: 10px !important;}
