--- a/src/app/users/add/add.component.scss
+++ b/src/app/users/add/add.component.scss
@@ -1,7 +1,10 @@
 .add-page {
   max-width: 300px;
-  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
-
+ 
 input::-webkit-inner-spin-button,input::-webkit-outer-spin-button {-webkit-appearance: none;}
