--- a/src/app/users/list/list.component.html
+++ b/src/app/users/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="box">
+<div class="box box-margin">
   <h4 class="float-left m-0">User List</h4>
 <button routerLink="/add" mat-button color="primary" class="float-right">Add User</button>
 <table mat-table matSort [dataSource]="users" class="mat-elevation-z8">
